--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
     "lint": "npm run lint:js && npm run lint:style",
     "test": "jest"
   },
-  "lint-staged": {
-    "*.{js,vue}": "eslint",
-    "*.{css,vue}": "stylelint"
-  },
   "husky": {},
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
@@ -32,6 +28,7 @@
     "@nuxt/typescript-build": "^2.0.4",
     "@nuxtjs/eslint-config-typescript": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@vue/test-utils": "^1.1.2",
     "babel-core": "7.0.0-bridge.0",
@@ -46,7 +43,9 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
+    "sass-loader": "^8.0.2",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
