--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "iview",
+        "libraryDirectory": "src/components"
+      }
+    ]
+  ],
   "env": {
     "test": {
       "presets": [
