--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.8.3",
     "iview": "^3.5.4",
     "nuxt": "^2.14.12",
+    "nuxt-ssr-cache": "^1.5.2",
     "swiper": "^5.2.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.6",
@@ -47,11 +48,13 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
+    "terser-webpack-plugin": "^4.2.1",
     "ts-jest": "^26.4.4",
     "vue-jest": "^3.0.4"
   }
