--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ssr_ts_template",
+  "name": "mosi_mp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "swiper": "^5.2.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-class-component": "^7.2.6",
+    "vue-lazyload": "^1.3.3",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
